adding  id for google analytchs

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="./images/Logo_favicon.png" />
+    <script  type="application/ld+json"> {"@context" : "http://schema.org", "@type" : "Organization", "name" : "Stratton Terrace Marketing", "url" : "https://strattonterrace.com", "sameAs" : [ "https://www.facebook.com/StrattonTerraceMarketing","https://www.linkedin.com/company/74679195/admin","https://twitter.com/StrattonTerrace"]}</script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
