--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Mission"
+      content="The Stratton Terrace Marketing Mission: To provide our clients with outstanding digital marketing services that will help them reach their goals."
     />
+    <meta
+    name="description"
+    content="Best Marketing Solutions"
+  />
     <link rel="manifest" href="https://cdnjs.cloudflare.com/ajax/libs/reactstrap/4.8.0/reactstrap.min.js" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
