--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <script  type="application/ld+json"> {"@context" : "http://schema.org", "@type" : "Organization", "name" : "Stratton Terrace Marketing", "url" : "https://strattonterrace.com", "sameAs" : [ "https://www.facebook.com/StrattonTerraceMarketing","https://www.linkedin.com/company/74679195/admin","https://twitter.com/StrattonTerrace"]}</script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property=”og:title” content=Phone.png/>
     <meta
       name="Mission"
       content="The Stratton Terrace Marketing Mission: To provide our clients with outstanding digital marketing services that will help them reach their goals."
